tests/correct/unop.ast.proc
(module 0
    (assign 1
        (id 1 a)
        (int_literal 1 3))
    (assign 2
        (id 2 b)
        (unop 2
            (id 2 not)
            (id 2 a)))
    (assign 3
        (id 3 b)
        (unop 3
            (id 3 -)
            (unop 3
                (id 3 -)
                (unop 3
                    (id 3 -)
                    (unop 3
                        (id 3 -)
                        (unop 3
                            (id 3 -)
                            (id 3 a)))))))
    (assign 4
        (id 4 b)
        (unop 4
            (id 4 +)
            (id 4 a)))
    (assign 5
        (id 5 b)
        (unop 5
            (id 5 ~)
