tests/error/negativeInID.ast.proc
(module 0
    (binop 1
        (id 1 a)
        (id 1 -)
        (id 1 b))
